--- a/NHH_netflix/src/app/pages/login/login.component.scss
+++ b/NHH_netflix/src/app/pages/login/login.component.scss
@@ -6,9 +6,10 @@
   justify-content: center;
   .login-card {
     background-color: black;
-    width: 360px;
+    width: 450px;
     margin: auto;
-    padding: 32px 16px;
+    padding: 60px 48px;
+    margin-top:32px;
     .heading{
         font-size: 24px;
         font-weight: bold;
