--- a/NHH_netflix/src/app/pages/browse/browse.component.html
+++ b/NHH_netflix/src/app/pages/browse/browse.component.html
@@ -1,1 +1,19 @@
-<p>browse works!</p>
+<div class="browse-page">
+    <app-header></app-header>
+    <div class="banner">
+        <img class="banner-img" src="../../../assets/images/bg_page.webp" alt="movie">
+        <div class="banner-movie-info">
+            <h4>Movie title</h4>
+            <p>Moview description</p>
+            <div>
+                <button>Play</button>
+                <button>More</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="movie-categories">
+        <app-movie-category [title]="'Trending'"></app-movie-category>
+        <app-movie-category [title]="'New relese'" ></app-movie-category>
+    </div>
+</div>
