--- a/NHH_netflix/src/app/pages/login/login.component.html
+++ b/NHH_netflix/src/app/pages/login/login.component.html
@@ -1,7 +1,5 @@
 <div class="h-screen" [ngStyle]="{'background-image': 'url('+bgURL+')'}">
-    <div class="flex ">
-        <img [src]="logoURL" alt="logo" class="w-52">
-    </div>
+    <app-header></app-header>
     <div class="login-container">
         <div class="login-card">
             <h2 class="heading">Sign in</h2>
