--- a/NHH_netflix/src/app/pages/browse/browse.component.html
+++ b/NHH_netflix/src/app/pages/browse/browse.component.html
@@ -13,7 +13,9 @@
     </div>
 
     <div class="movie-categories">
-        <app-movie-category [title]="'Trending'"></app-movie-category>
-        <app-movie-category [title]="'New relese'" ></app-movie-category>
+        <app-movie-category [title]="'Trending'" [movieList]="popularMovies"></app-movie-category>
+        <app-movie-category [title]="'Top Rated'" [movieList]="topRateMovies" ></app-movie-category>
+        <app-movie-category [title]="'Upcoming'" [movieList]="upComingMovies" ></app-movie-category>
+        <app-movie-category [title]="'Now playing'" [movieList]="nowPlayMovies" ></app-movie-category>
     </div>
 </div>
