complete the call api movie

--- a/NHH_netflix/src/app/components/movie-card/movie-card.component.html
+++ b/NHH_netflix/src/app/components/movie-card/movie-card.component.html
@@ -1,7 +1,7 @@
 @if(movie){
     <div class="movie-card">
-    <img [src]="tmcbConfig.imgPath + movie.poster_path" alt="movie">
-    <h4>{{movie.original_title}}</h4>
+    <img [src]="tmcbConfig.imagePath + movie.poster_path" alt="movie">
+    <h4 class="title">{{movie.original_title}}</h4>
     <p>movie description</p>
 </div>
 }
