--- a/NHH_netflix/src/app/components/movie-category/movie-category.component.html
+++ b/NHH_netflix/src/app/components/movie-category/movie-category.component.html
@@ -1,6 +1,6 @@
-<div>
-    <h4 class="text-white font-bold mb-2">{{title}}</h4>
-    <div class="flex gap-2">
+<div claas="mb-12"style="margin-bottom:60px !important">
+    <h4 class="text-white font-bold mb-4 text-xl">{{title}}</h4>
+    <div class="flex gap-4">
         @for(movie of movieList; track movie){
         <app-movie-card [movie]="movie"></app-movie-card>
         }
