--- a/NHH_netflix/src/app/pages/browse/browse.component.html
+++ b/NHH_netflix/src/app/pages/browse/browse.component.html
@@ -1,21 +1,29 @@
 <div class="browse-page">
     <app-header></app-header>
     <div class="banner">
-        <img class="banner-img" src="../../../assets/images/bg_page.webp" alt="movie">
+        @if(bannerMovie && bannerMovie.videoKey){
+        <iframe class="banner-video" [src]="domSanitise.bypassSecurityTrustResourceUrl('https://www.youtube.com/embed/'+'?&mute=1')
+        + bannerMovie.videoKey" 
+        frameborder="0" 
+        ></iframe>
+        }
+        @else{
+        <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie.poster_path" alt="movie">
+        }
         <div class="banner-movie-info">
-            <h4>Movie title</h4>
-            <p>Moview description</p>
-            <div>
-                <button>Play</button>
-                <button>More</button>
+            <h4 class="banner-heading">{{bannerMovie.original_title}}</h4>
+            <p class="banner-description">{{bannerMovie.overview}}</p>
+            <div class="banner-action">
+                <button class="play-btn">Play</button>
+                <button class="info-btn"> More Info</button>
             </div>
         </div>
     </div>
 
-    <div class="movie-categories">
+    <div class="movie-categories px-16 relative z-50 -mt-40">
         <app-movie-category [title]="'Trending'" [movieList]="popularMovies"></app-movie-category>
-        <app-movie-category [title]="'Top Rated'" [movieList]="topRateMovies" ></app-movie-category>
-        <app-movie-category [title]="'Upcoming'" [movieList]="upComingMovies" ></app-movie-category>
-        <app-movie-category [title]="'Now playing'" [movieList]="nowPlayMovies" ></app-movie-category>
+        <app-movie-category [title]="'Top Rated'" [movieList]="topRateMovies"></app-movie-category>
+        <app-movie-category [title]="'Upcoming'" [movieList]="upComingMovies"></app-movie-category>
+        <app-movie-category [title]="'Now playing'" [movieList]="nowPlayMovies"></app-movie-category>
     </div>
 </div>
