--- a/NHH_netflix/src/app/pages/browse/browse.component.scss
+++ b/NHH_netflix/src/app/pages/browse/browse.component.scss
@@ -3,19 +3,58 @@
   .banner {
     height: 100vh;
     width: 100vw;
-    .banner-img{
-     position: absolute;
-     top:0;
-     width: 100%;
-     height: 100%;   
+    .banner-img {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+    }
+    .banner-video{
+      position: absolute;
+      top:0;
+      width: 100%;
+      height: 100%;
     }
   }
-  .banner-movie-info{
-   position: relative;
-   display: flex;
-   z-index: 9999;
-   flex-direction: column;
-   top:40%;
-   padding-left: 2 rem;
+  .banner-movie-info {
+    width: 40%;
+    color: white;
+    position: relative;
+    display: flex;
+    z-index: 9999;
+    flex-direction: column;
+    top: 40%;
+    padding-left: 2 rem;
+    padding-left: 60px;
+    .banner-heading {
+      font-size: 48px;
+      font-weight: bold;
+    }
+    .banner-description {
+      font-size: 18px;
+    }
+    .banner-action {
+      font-weight: bold;
+      font-size: 20px;
+      display: flex;
+      justify-content: start;
+      gap:32px;
+      margin-top:32px;
+      .play-btn {
+        border-radius: 4px;
+        background-color: #958f8f;
+        color: black;
+        margin: 10px;
+        padding: 12px 50px;
+      }
+      .info-btn {
+        padding: 12px 60px;
+        background-color: #424040;
+         border-radius: 4px;
+        color: black;
+        margin: 10px;
+        padding: 12px 60px;
+      }
+    }
   }
 }
