--- a/NHH_netflix/src/styles.scss
+++ b/NHH_netflix/src/styles.scss
@@ -2,7 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+// @import "~ng-zorro-antd/ng-zorro-antd.min.css";
+
 
 body{
     overflow-x: hidden;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
