--- a/NHH_netflix/src/app/pages/dialog/dialog.component.html
+++ b/NHH_netflix/src/app/pages/dialog/dialog.component.html
@@ -1,34 +1,31 @@
-<div class="info-movie">
-    <div class="close"><mat-icon>close</mat-icon></div>
-    <h2 mat-dialog-title>Install Angular</h2>
-    <h3>Incredible tooling</h3>
-    <p>Build features quickly with simple, declarative templates. Extend the template language with
-      your own components and use a wide array of existing components. Get immediate Angular-specific
-      help and feedback with nearly every IDE and editor. All this comes together so you can focus
-      on building amazing apps rather than trying to make the code work.</p>
-  
-    <h3>Loved by millions</h3>
-    <p>From prototype through global deployment, Angular delivers the productivity and scalable
-      infrastructure that supports Google's largest applications.</p>
-  
-    <h3>What is Angular?</h3>
-  
-    <p>Angular is a platform that makes it easy to build applications with the web. Angular
-      combines declarative templates, dependency injection, end to end tooling, and integrated
-      best practices to solve development challenges. Angular empowers developers to build
-      applications that live on the web, mobile, or the desktop</p>
-  
-    <h3>Architecture overview</h3>
-  
-    <p>Angular is a platform and framework for building client applications in HTML and TypeScript.
-    Angular is itself written in TypeScript. It implements core and optional functionality as a
-    set of TypeScript libraries that you import into your apps.</p>
-  
-    <p>The basic building blocks of an Angular application are NgModules, which provide a compilation
-    context for components. NgModules collect related code into functional sets; an Angular app is
-    defined by a set of NgModules. An app always has at least a root module that enables
-    bootstrapping, and typically has many more feature modules.</p>
+
+<div class="browse-page">
+  <app-header></app-header>
+  <div class="banner">
+      <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie.poster_path" alt="movie">
+      <!-- @if(bannerMovie && bannerMovie.videoKey){
+      <iframe
+    class="banner-video"
+    [src]=" domSanitise.bypassSecurityTrustResourceUrl('https://www.youtube.com/embed/' + bannerMovie.videoKey + '?autoplay=1&mute=1&showinfo=0&controls=0')"
+    frameborder="0"></iframe>
+      }
+      @else{
+      <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie.poster_path" alt="movie">
+      } -->
+      <div class="banner-movie-info">
+          <h4 class="banner-heading">{{bannerMovie.original_title}}</h4>
+          <!-- <p class="banner-description">{{bannerMovie.overview}}</p> -->
+          <div class="banner-action">
+              <button class="play-btn flex">
+                  <mat-icon>play_arrow</mat-icon>
+                  <span>Play</span>
+              </button>
+              <button class="info-btn flex"> 
+                  <mat-icon>add_circle</mat-icon>
+                </button>
+                <mat-icon>thumb_up_alt</mat-icon>
+          </div>
+      </div>
+  </div>
+
 </div>
-
-
-
