--- a/NHH_netflix/src/app/pages/dialog/dialog.component.scss
+++ b/NHH_netflix/src/app/pages/dialog/dialog.component.scss
@@ -1,74 +1,75 @@
 .browse-page {
-    background-color: black;
-    .banner {
-      height: 100vh;
-      width: 100vw;
-      .banner-img {
-        position: absolute;
-        top: 0;
-        width: 100%;
-        height: 70%;
-      }
-      .banner-video{
-        position: absolute;
-        top:0;
-        width: 100%;
-        height: 100%;
-      }
+  background-color: black;
+  .banner {
+    height: 100vh;
+    width: 100vw;
+    .banner-img {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 70%;
     }
-    .banner-movie-info {
-      width: 40%;
-      color: white;
-      position: relative;
+    .banner-video {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .banner-movie-info {
+    width: 40%;
+    color: white;
+    position: relative;
+    display: flex;
+    z-index: 999;
+    flex-direction: column;
+    top: 40%;
+    padding-left: 2 rem;
+    padding-left: 60px;
+    .banner-heading {
+      font-size: 48px;
+      font-weight: bold;
+      font-family: fantasy;
+    }
+    .banner-description {
+      font-size: 16px;
+      margin-top: 20px;
+      font-weight: 400;
+      font-family: "Times New Roman", Times, serif;
+    }
+    .banner-action {
+      font-weight: bold;
+      font-size: 20px;
       display: flex;
-      z-index: 999;
-      flex-direction: column;
-      top: 40%;
-      padding-left: 2 rem;
-      padding-left: 60px;
-      .banner-heading {
-        font-size: 48px;
-        font-weight: bold;
-        font-family: fantasy;
-
+      justify-content: start;
+      align-items: center;
+      margin-top: 32px;
+      outline: none;
+      font-size: 13px;
+      margin: auto;
+      .play-btn {
+        border-radius: 4px;
+        background-color: white;
+        color: black;
+        margin: 10px;
+        padding: 10px 35px;
+        &:hover {
+          opacity: 0.8;
+        }
       }
-      .banner-description {
-        font-size: 16px;
-        margin-top:20px;
-        font-weight: 400;
-        font-family:'Times New Roman', Times, serif ;
-      }
-      .banner-action {
-        font-weight: bold;
-        font-size: 20px;
+      .info-btn {
         display: flex;
-        justify-content: start;
-        margin-top:32px;
-        outline: none;
-        font-size: 13px;
-        margin: auto;
-        .play-btn {
-          border-radius: 4px;
-          background-color: white;
-          color: black;
-          margin: 10px;
-          padding: 10px 35px;
-          &:hover{
-            opacity: 0.8;
-          }
+        justify-content: center;
+        align-items: center;
+        width: 45px;
+        height: 45px;
+        background-color: rgba($color: #515151, $alpha: 0.8);
+        color: white;
+        border-radius: 50%;
+        &:hover {
+          opacity: 0.8;
         }
-        .info-btn {
-            width: 30px;
-            height: 30px;
-          background-color: rgba($color: #515151, $alpha: 0.8);
-          color:white;
-        //   margin: 10px;
-          border-radius: 50%;
-          &:hover{
-            opacity: 0.8;
-          }
-        }
-
       }
     }
   }
+}
