add carousel movie category

--- a/NHH_netflix/src/app/components/movie-card/movie-card.component.html
+++ b/NHH_netflix/src/app/components/movie-card/movie-card.component.html
@@ -2,6 +2,6 @@
     <div class="movie-card">
     <img [src]="tmcbConfig.imagePath + movie.poster_path" alt="movie">
     <h4 class="title">{{movie.original_title}}</h4>
-    <p>movie description</p>
+    <!-- <p>movie description</p> -->
 </div>
 }
