--- a/NHH_netflix/src/app/pages/dialog/dialog.component.html
+++ b/NHH_netflix/src/app/pages/dialog/dialog.component.html
@@ -31,8 +31,9 @@
       
       </div>
     </div>
-    <div class="movie-categories px-16 relative z-50 -mt-40">
-      <app-movie-category [title]="'Trending'" [movieList]="popularMovies"></app-movie-category>
   </div>
+  <div class="movie-categories px-16 relative z-50 -mt-40">
+    <!-- <app-movie-category [title]="'Trending'" [movieList]="popularMovies"></app-movie-category> -->
+    <!-- <app-movie-card></app-movie-card> -->
   </div>
 </div>
