--- a/NHH_netflix/src/styles.scss
+++ b/NHH_netflix/src/styles.scss
@@ -3,6 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 // @import "~ng-zorro-antd/ng-zorro-antd.min.css";
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
 
 
 body{
