--- a/NHH_netflix/src/app/components/movie-card/movie-card.component.scss
+++ b/NHH_netflix/src/app/components/movie-card/movie-card.component.scss
@@ -1,7 +1,9 @@
 .movie-card{
     width:200px;
     height:300px;
-    background-color: red !important;
+    img{
+        border-radius: 10px;
+    }
     .title{
         position: absolute;
         bottom: 8px;
