--- a/NHH_netflix/src/app/components/movie-category/movie-category.component.html
+++ b/NHH_netflix/src/app/components/movie-category/movie-category.component.html
@@ -1,4 +1,4 @@
-<div claas="mb-12"style="margin-bottom:60px !important">
+<!-- <div claas="mb-12"style="margin-bottom:60px !important">
     <h4 class="text-white font-bold mb-4 text-xl">{{title}}</h4>
     <div class="flex gap-4">
         @for(movie of movieList; track movie){
@@ -8,4 +8,25 @@
             <p>Loading....</p>
         }
     </div>
+</div> -->
+<div class="card mt-2">
+    <p-carousel [value]="movieList" [numVisible]="3" [numScroll]="1" [responsiveOptions]="responsiveOptions">
+        <ng-template let-product pTemplate="item">
+            <div class="product-item">
+                <h4 class="text-white font-bold mb-4 text-xl uppercase">{{title}}</h4>
+                <div class="product-item-content">
+                    <div claas="mb-12" style="margin-bottom:40px !important">
+                        <div class="flex gap-4">
+                            @for(movie of movieList; track movie){
+                            <app-movie-card [movie]="movie"></app-movie-card>
+                            }
+                            @empty {
+                            <p>Loading....</p>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </ng-template>
+    </p-carousel>
 </div>
