add footer and clear code

--- a/NHH_netflix/src/app/components/movie-card/movie-card.component.html
+++ b/NHH_netflix/src/app/components/movie-card/movie-card.component.html
@@ -1,7 +1,10 @@
 @if(movie){
     <div class="movie-card">
     <img [src]="tmcbConfig.imagePath + movie.poster_path" alt="movie">
-    <h4 class="title">{{movie.original_title}}</h4>
-    <!-- <p>movie description</p> -->
+    <div class="title">
+        <div class="text-green-600">{{movie.original_title}}</div>
+        <span class="uppercase text-xs"> {{movie.original_language}} - </span>
+        <span class="text-xs">{{movie.release_date | date:'mediumDate'}}</span>
+    </div>
 </div>
 }
