--- a/NHH_netflix/src/app/pages/browse/browse.component.html
+++ b/NHH_netflix/src/app/pages/browse/browse.component.html
@@ -1,7 +1,9 @@
 <div class="browse-page">
+    <!-- header -->
     <app-header></app-header>
+    <!-- banner -->
     <div class="banner">
-        <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie.poster_path" alt="movie">
+        <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie?.poster_path" alt="movie">
         <!-- @if(bannerMovie && bannerMovie.videoKey){
         <iframe
       class="banner-video"
@@ -12,7 +14,7 @@
         <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie.poster_path" alt="movie">
         } -->
         <div class="banner-movie-info">
-            <h4 class="banner-heading">{{bannerMovie.original_title}}</h4>
+            <h4 class="banner-heading text-gray-50">{{bannerMovie.title}}</h4>
             <p class="banner-description">{{bannerMovie.overview}}</p>
             <div class="banner-action">
                 <button class="play-btn flex">
@@ -22,16 +24,17 @@
                 <button class="info-btn flex"> 
                     <mat-icon>error_outline</mat-icon>
                     <button class="px-1" mat-button (click)="openSignUpForm()">More Info</button> 
-                    <!-- <span class="px-1"> More Info</span>  -->
                 </button>
             </div>
         </div>
     </div>
-
+    <!-- categories movie -->
     <div class="movie-categories px-16 relative z-50 -mt-40">
         <app-movie-category [title]="'Trending'" [movieList]="popularMovies"></app-movie-category>
-        <app-movie-category [title]="'Top Rated'" [movieList]="topRateMovies"></app-movie-category>
+        <!-- <app-movie-category [title]="'Top Rated'" [movieList]="topRateMovies"></app-movie-category>
         <app-movie-category [title]="'Upcoming'" [movieList]="upComingMovies"></app-movie-category>
-        <app-movie-category [title]="'Now playing'" [movieList]="nowPlayMovies"></app-movie-category>
+        <app-movie-category [title]="'Now playing'" [movieList]="nowPlayMovies"></app-movie-category> -->
     </div>
+    <!-- footer -->
+    <app-footer></app-footer>
 </div>
