--- a/NHH_netflix/src/app/components/movie-card/movie-card.component.scss
+++ b/NHH_netflix/src/app/components/movie-card/movie-card.component.scss
@@ -1,31 +1,29 @@
 .movie-card{
     width:200px;
     height:300px;
+    border-radius: 10px;
     img{
         border-radius: 10px;
     }
     .title{
         position: absolute;
-        bottom: 8px;
+        bottom: 0;
         color: white;
         font-size:12px;
-        font-weight: bold;
         background-color:rgb(34, 33, 33);
         display: none;
-        text-align: center !important;
         width: 200px;
     }
     &:hover{
         transform: scale(1.2);
         transition: all .3s ease-in-out;
         .title{
-            position: absolute;
-            bottom: 8px;
+            padding:5px;
             color: white;
             font-size:12px;
-            font-weight: bold;
             background-color:rgb(34, 33, 33);
             display: block;
+            word-wrap: break-word;
         }
     }
 
