--- a/NHH_netflix/src/app/pages/browse/browse.component.scss
+++ b/NHH_netflix/src/app/pages/browse/browse.component.scss
@@ -1,5 +1,5 @@
 .browse-page {
-  background-color: black;
+  background-color: rgb(28, 28, 28);
   .banner {
     height: 100vh;
     width: 100vw;
