--- a/NHH_netflix/src/app/pages/browse/browse.component.html
+++ b/NHH_netflix/src/app/pages/browse/browse.component.html
@@ -31,9 +31,11 @@
     <!-- categories movie -->
     <div class="movie-categories px-16 relative z-50 -mt-40">
         <app-movie-category [title]="'Trending'" [movieList]="popularMovies"></app-movie-category>
+        <app-movie-category [title]="'Playlist'" [movieList]="nowPlayMovies"></app-movie-category>
         <app-movie-category [title]="'Top Rated'" [movieList]="topRateMovies"></app-movie-category>
         <app-movie-category [title]="'Upcoming'" [movieList]="upComingMovies"></app-movie-category>
         <app-movie-category [title]="'Now playing'" [movieList]="nowPlayMovies"></app-movie-category>
+        <app-movie-category [title]="'Coming'" [movieList]="upComingMovies"></app-movie-category>
     </div>
     <!-- footer -->
     <app-footer></app-footer>
