--- a/NHH_netflix/src/app/pages/dialog/dialog.component.html
+++ b/NHH_netflix/src/app/pages/dialog/dialog.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="movie-categories px-4">
     <p class="font-bold text-green-600 text-3xl"> {{bannerMovie.title}}</p>
-    <span class="font-bold"> {{bannerMovie.release_date}} - </span>
+    <span class="font-bold"> {{bannerMovie.release_date | date:'mediumDate'}} - </span>
     <span class="font-bold uppercase"> {{ bannerMovie.original_language}} - </span>
     <span class="font-bold">Vote: {{bannerMovie.vote_count}} - </span>
     <span class="font-bold">popularity: {{bannerMovie.popularity}}</span>
