--- a/NHH_netflix/src/app/pages/login/login.component.scss
+++ b/NHH_netflix/src/app/pages/login/login.component.scss
@@ -5,11 +5,12 @@
   display: flex;
   justify-content: center;
   .login-card {
-    background-color: black;
-    width: 450px;
+    margin-top: 200px;
+    background-color: rgba(15, 14, 14, 0.9);
+    width: 350px;
     margin: auto;
     padding: 60px 48px;
-    margin-top:32px;
+    margin-top:120px;
     .heading{
         font-size: 24px;
         font-weight: bold;
@@ -18,6 +19,13 @@
         text-align: center;
         margin-bottom: 30px;
     }
+    .forgot-btn{
+      color: whitesmoke !important;
+      text-decoration: none;
+      &:hover{
+        // border-bottom: 1px solid whitesmoke;
+      }
+    }
   }
 }
 
@@ -25,21 +33,28 @@
   margin-bottom: 10px;
   .input {
     width: 100% !important;
-    background-color: rgb(65, 63, 63);
+    background-color: rgba(15, 14, 14, 0.9);
     padding: 10px 10px;
     border-radius: 2px;
     color: white;
+    outline: 1px solid gray;
+    margin:10px 0px;
   }
 }
 .action-field {
   display: flex;
   justify-content: center;
+  .btn{
+    padding: 10px 12px;
+    border-radius: 5px;
+    width: 100%;
+    color: whitesmoke;
+    font-weight: bold;
+  }
   .login-button {
     background-color: red;
-    padding: 10px 12px;
-    border-radius: 2px;
-    width: 100%;
-    color: white;
-    font-weight: bold;
+  }
+  .sign-in__code{
+    background-color: rgba(83, 82, 82, 0.9);
   }
 }
