--- a/NHH_netflix/src/styles.scss
+++ b/NHH_netflix/src/styles.scss
@@ -7,8 +7,11 @@
 @import "primeng/resources/primeng.css";
 
 
+*{
+    // font-family :'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 body{
     overflow-x: hidden;
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; }
