add feat search name

--- a/NHH_netflix/src/app/components/header/header.component.html
+++ b/NHH_netflix/src/app/components/header/header.component.html
@@ -1,13 +1,23 @@
 <div class="header ">
-    <img [src]="logoURL" alt="logo" class="w-52">
+    <img [src]="logoURL" alt="logo" class="w-52" >
     <ul class="navigation-menu" [ngClass]="hiddenHeader ? 'd-block' : 'd-none'">
         @for( menu of menuHeader; track menu){
         <div class="menu-items">{{menu}}</div>
         }
     </ul>
     <ul class="element" [ngClass]="hiddenHeader ? 'd-block' : 'd-none'">
-        <div class="search-element" (mouseenter)="Search()" (mouseleave)="hiddenSeach()">
-            @if(hiddenSearch){
+        <div class="search-element" (click)="Search()" (mouseleave)="hiddenSeach()">
+            <div class="container">
+                <input checked="" class="checkbox" type="checkbox"> 
+                <div class="mainbox">
+                    <div class="iconContainer">
+                        <svg viewBox="0 0 512 512" height="1em" xmlns="http://www.w3.org/2000/svg" class="search_icon"><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"></path></svg>
+                    </div>
+                 <input class="search_input" placeholder="search" type="text">
+                </div>
+            </div>
+
+            <!-- @if(hiddenSearch){
             <li class="items-icon search"><mat-icon>search</mat-icon></li>
             }
             @else{
@@ -17,7 +27,7 @@
             <ng-template #suffixIconSearch>
                 <span nz-icon nzType="search"></span>
             </ng-template>
-            }
+            } -->
         </div>
         <li class="items-icon notify">
             <mat-icon>notifications</mat-icon>
@@ -25,23 +35,24 @@
         <li class="items-icon kid">
             <mat-icon>face</mat-icon>
             <div class="icon-account text-xs my-3">
-                <div class="flex icon-account_el my-2">
-                    <img src="../../../assets/images/m_1.jpg" width="30px" alt=""><span class="px-2">Nguyen Van A</span>
+                <div class="flex icon-account_el my-3">
+                    <img src="../../../assets/images/m_1.jpg" width="35px" alt=""><span class="px-2">Nguyen Van A</span>
                 </div>
-                <div class="flex icon-account_el"><mat-icon>edit</mat-icon>
-                    <p class="px-2">Manager Profile</p>
+                <div class="flex icon-account_el"><mat-icon class="text-xs">edit</mat-icon>
+                    <p class="px-2 text-xs">Manager Profile</p>
                 </div>
-                <div class="flex icon-account_el"><mat-icon>face</mat-icon>
-                    <p class="px-2">Transfer Profile</p>
+                <div class="flex icon-account_el"><mat-icon class="text-xs">face</mat-icon>
+                    <p class="px-2 text-xs">Transfer Profile</p>
                 </div>
-                <div class="flex icon-account_el"><mat-icon>supervised_user_circle</mat-icon>
-                    <p class="px-2">Account</p>
+                <div class="flex icon-account_el"><mat-icon class="text-xs">supervised_user_circle</mat-icon>
+                    <p class="px-2 text-xs">Account</p>
                 </div>
-                <div class="flex icon-account_el"><mat-icon>help_outline</mat-icon>
-                    <p class="px-2">Help center</p>
+                <div class="flex icon-account_el"><mat-icon class="text-xs">help_outline</mat-icon>
+                    <p class="px-2 text-xs">Help center</p>
                 </div>
+                <div class="text-center sign-out" (click)="logOut()">Sign out of netflix</div>
             </div>
         </li>
-        <li class="items-icon info"><mat-icon>arrow_drop_down</mat-icon></li>
+        <!-- <li class="items-icon info"><mat-icon class="text-xs">arrow_drop_down</mat-icon></li> -->
     </ul>
 </div>
