--- a/NHH_netflix/src/app/components/header/header.component.scss
+++ b/NHH_netflix/src/app/components/header/header.component.scss
@@ -1,7 +1,8 @@
-.d-none{
+.d-none {
   display: none !important;
 }
-.d-block{
+
+.d-block {
   display: flex !important;
 }
 
@@ -12,88 +13,204 @@
   right: 0;
   background-image: linear-gradient(to bottom, rgb(14 14 14), rgb(9 9 9/7%));
   z-index: 9999;
-  color: white;
+  color: #fff;
   display: flex;
   align-items: center;
-  width:100%;
-  img {
+  width: 100%;
+
+  height:90px img {
     width: 20%;
+    height: 40px;
   }
+
   .navigation-menu {
     width: 60%;
     display: flex;
     padding: 0px 20px;
-    .menu-items{
-      padding:0px 20px;
+
+    .menu-items {
+      padding: 0px 20px;
       cursor: pointer;
       font-weight: 500;
-      &:hover{
+
+      &:hover {
         color: #b1b1b1;
       }
     }
   }
-  .element{
-    width:20%;
-    float:right;
+
+  .element {
+    width: 20%;
+    float: right;
     display: flex;
     justify-content: end;
-    margin-right:30px;
-    padding:5px 0px;
-    height:40px;
-    .items-icon{
-      font-size:20px;
-      padding:0px 8px;
+    margin-right: 10px;
+    // padding:5px 0px;
+    height: 40px;
+    align-items: center;
+
+    .items-icon {
+      font-size: 12px;
+      // font-size:20px;
+      padding: 10px 8px;
     }
-    .kid{
+
+    .kid {
       position: relative;
-      .icon-account{
+
+      .icon-account {
         position: absolute;
-        top: 20px;
+        top: 35px;
         right: 0;
         background-color: rgba(0, 0, 0, 0.7);
-        color: white;
-        padding:10px;
+        color: #fff;
+        padding: 10px;
         width: 250px;
         cursor: pointer;
         border-radius: 10px;
         display: none;
-        &::before{
+
+        &::before {
           content: "";
           position: absolute;
           top: -5px;
           right: 15px;
-          background-color: rgba(0, 0, 0, 0.7);;
+          background-color: rgba(0, 0, 0, 0.7);
+          ;
           width: 10px;
           height: 10px;
           transform: rotate(45deg);
           z-index: -1;
         }
-        .icon-account_el:hover{
+
+        .icon-account_el:hover {
           opacity: 0.8;
         }
       }
+
       &:hover .icon-account {
         display: block;
       }
     }
-    .notify{
+
+    .notify {
       position: relative;
-        &::before{
-          position: absolute;
-          top: -10px;
-          right: 0;
-          width: 20px;
-          text-align: center;
-          border-radius: 50%;
-          content: "12";
-          font-size: 12px;
-          background-color: black;
-        }
+
+      &::before {
+        position: absolute;
+        top: -10px;
+        right: 0;
+        width: 20px;
+        text-align: center;
+        border-radius: 50%;
+        content: "12";
+        font-size: 12px;
+        background-color: black;
+      }
     }
-    .info{
-      &:hover{
+
+    .info {
+      &:hover {
         opacity: 0.8;
       }
+    }
+
+    .sign-out {
+      border-top: 1px solid #666666;
+      padding: 8px 0px;
+
+      &:hover {
+        color: green;
+        font-weight: bold
+      }
+    }
+
+    .container {
+      position: relative;
+      box-sizing: border-box;
+      width: fit-content;
+      // background-color: red;
+    }
+
+    .mainbox {
+      box-sizing: border-box;
+      position: relative;
+      width: 230px;
+      // height: 30px;
+      display: flex;
+      flex-direction: row-reverse;
+      align-items: center;
+      justify-content: center;
+      border-radius: 160px;
+      background-color: rgb(0, 0, 0);
+      transition: all 0.3s ease;
+      padding: 5px 0px;
+    }
+
+    .checkbox:focus {
+      border: none;
+      outline: none;
+    }
+
+    .checkbox:checked {
+      right: 10px;
+    }
+
+    .checkbox:checked~.mainbox {
+      width: 50px;
+    }
+
+    .checkbox:checked~.mainbox .search_input {
+      width: 0;
+      height: 0px;
+    }
+
+    .checkbox:checked~.mainbox .iconContainer {
+      padding-right: 8px;
+    }
+
+    .checkbox {
+      box-sizing: border-box;
+      width: 30px;
+      height: 30px;
+      position: absolute;
+      right: 17px;
+      top: 10px;
+      z-index: 9;
+      cursor: pointer;
+      appearance: none;
+    }
+
+    .search_input {
+      box-sizing: border-box;
+      height: 80%;
+      width: 170px;
+      background-color: transparent;
+      border: none;
+      outline: none;
+      padding: 7px 0px;
+      padding-left: 10px;
+      font-size: 1em;
+      color: #fff;
+      transition: all 0.3s ease;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .search_input::placeholder {
+      color: rgba(255, 255, 255, 0.776);
+    }
+
+    .iconContainer {
+      box-sizing: border-box;
+      padding-top: 5px;
+      width: fit-content;
+      transition: all 0.3s ease;
+    }
+
+    .search_icon {
+      box-sizing: border-box;
+      fill: #fff;
+      font-size: 1.3em;
     }
 
   }
