--- a/NHH_netflix/src/app/pages/browse/browse.component.scss
+++ b/NHH_netflix/src/app/pages/browse/browse.component.scss
@@ -36,7 +36,8 @@
       font-size: 16px;
       margin-top:20px;
       // font-weight: 400;
-      font-family:'Times New Roman', Times, serif ; 
+      font-family:'Times New Roman', Times, serif ;
+      text-align: justify;
 
     }
     .banner-action {
