--- a/NHH_netflix/src/app/components/header/header.component.scss
+++ b/NHH_netflix/src/app/components/header/header.component.scss
@@ -17,10 +17,15 @@
   display: flex;
   align-items: center;
   width: 100%;
+  background-color: rgb(0, 0, 0, 0.8);
 
   height:90px img {
     width: 20%;
     height: 40px;
+  }
+
+  ul {
+    margin: 0 !important;
   }
 
   .navigation-menu {
@@ -53,6 +58,9 @@
       font-size: 12px;
       // font-size:20px;
       padding: 10px 8px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .kid {
@@ -62,8 +70,8 @@
         position: absolute;
         top: 35px;
         right: 0;
-        background-color: rgba(0, 0, 0, 0.7);
-        color: #fff;
+        background-color: rgba(255, 255, 255);
+        color: black;
         padding: 10px;
         width: 250px;
         cursor: pointer;
@@ -75,8 +83,7 @@
           position: absolute;
           top: -5px;
           right: 15px;
-          background-color: rgba(0, 0, 0, 0.7);
-          ;
+          background-color: rgba(255, 255, 255);
           width: 10px;
           height: 10px;
           transform: rotate(45deg);
@@ -84,7 +91,8 @@
         }
 
         .icon-account_el:hover {
-          opacity: 0.8;
+          // opacity: 0.8;
+          color: green;
         }
       }
 
@@ -95,6 +103,7 @@
 
     .notify {
       position: relative;
+      padding:10px 8px;
 
       &::before {
         position: absolute;
@@ -129,22 +138,21 @@
       position: relative;
       box-sizing: border-box;
       width: fit-content;
-      // background-color: red;
     }
 
     .mainbox {
       box-sizing: border-box;
       position: relative;
       width: 230px;
-      // height: 30px;
       display: flex;
       flex-direction: row-reverse;
       align-items: center;
       justify-content: center;
       border-radius: 160px;
-      background-color: rgb(0, 0, 0);
+      background-color: whitesmoke;
       transition: all 0.3s ease;
       padding: 5px 0px;
+      margin-right: 10px;
     }
 
     .checkbox:focus {
@@ -188,16 +196,15 @@
       background-color: transparent;
       border: none;
       outline: none;
-      padding: 7px 0px;
       padding-left: 10px;
       font-size: 1em;
-      color: #fff;
+      color: black;
       transition: all 0.3s ease;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
     .search_input::placeholder {
-      color: rgba(255, 255, 255, 0.776);
+      color: black;
     }
 
     .iconContainer {
@@ -209,7 +216,7 @@
 
     .search_icon {
       box-sizing: border-box;
-      fill: #fff;
+      fill: black;
       font-size: 1.3em;
     }
 
