--- a/NHH_netflix/src/app/components/header/header.component.scss
+++ b/NHH_netflix/src/app/components/header/header.component.scss
@@ -17,15 +17,10 @@
   display: flex;
   align-items: center;
   width: 100%;
-  background-color: rgb(0, 0, 0, 0.8);
 
   height:90px img {
     width: 20%;
     height: 40px;
-  }
-
-  ul {
-    margin: 0 !important;
   }
 
   .navigation-menu {
@@ -58,9 +53,6 @@
       font-size: 12px;
       // font-size:20px;
       padding: 10px 8px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
 
     .kid {
@@ -70,8 +62,8 @@
         position: absolute;
         top: 35px;
         right: 0;
-        background-color: rgba(255, 255, 255);
-        color: black;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: #fff;
         padding: 10px;
         width: 250px;
         cursor: pointer;
@@ -83,7 +75,8 @@
           position: absolute;
           top: -5px;
           right: 15px;
-          background-color: rgba(255, 255, 255);
+          background-color: rgba(0, 0, 0, 0.7);
+          ;
           width: 10px;
           height: 10px;
           transform: rotate(45deg);
@@ -91,8 +84,7 @@
         }
 
         .icon-account_el:hover {
-          // opacity: 0.8;
-          color: green;
+          opacity: 0.8;
         }
       }
 
@@ -103,7 +95,6 @@
 
     .notify {
       position: relative;
-      padding:10px 8px;
 
       &::before {
         position: absolute;
@@ -138,21 +129,22 @@
       position: relative;
       box-sizing: border-box;
       width: fit-content;
+      // background-color: red;
     }
 
     .mainbox {
       box-sizing: border-box;
       position: relative;
       width: 230px;
+      // height: 30px;
       display: flex;
       flex-direction: row-reverse;
       align-items: center;
       justify-content: center;
       border-radius: 160px;
-      background-color: whitesmoke;
+      background-color: rgb(0, 0, 0);
       transition: all 0.3s ease;
       padding: 5px 0px;
-      margin-right: 10px;
     }
 
     .checkbox:focus {
@@ -196,15 +188,16 @@
       background-color: transparent;
       border: none;
       outline: none;
+      padding: 7px 0px;
       padding-left: 10px;
       font-size: 1em;
-      color: black;
+      color: #fff;
       transition: all 0.3s ease;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
     .search_input::placeholder {
-      color: black;
+      color: rgba(255, 255, 255, 0.776);
     }
 
     .iconContainer {
@@ -216,7 +209,7 @@
 
     .search_icon {
       box-sizing: border-box;
-      fill: black;
+      fill: #fff;
       font-size: 1.3em;
     }
 
