--- a/NHH_netflix/src/app/components/header/header.component.html
+++ b/NHH_netflix/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
-<div class="header ">
+<div class="header">
+    <mat-icon class="header-menu">menu</mat-icon>
     <img [src]="logoURL" alt="logo" class="w-52" >
     <ul class="navigation-menu" [ngClass]="hiddenHeader ? 'd-block' : 'd-none'">
         @for( menu of menuHeader; track menu){
