--- a/NHH_netflix/src/app/pages/browse/browse.component.html
+++ b/NHH_netflix/src/app/pages/browse/browse.component.html
@@ -39,5 +39,7 @@
         <!-- <app-movie-category [title]="'Coming'" [movieList]="upComingMovies"></app-movie-category> -->
     </div>
     <!-- footer -->
-    <app-footer></app-footer>
+    <div>
+        <app-footer></app-footer>
+    </div>
 </div>
