--- a/NHH_netflix/src/app/components/movie-card/movie-card.component.scss
+++ b/NHH_netflix/src/app/components/movie-card/movie-card.component.scss
@@ -28,3 +28,32 @@
     }
 
 }
+
+
+// reponsive tablet, mobile
+@media (max-width: 1400px) {
+    
+  }
+  
+  @media (max-width: 975px) {
+   
+  }
+  
+  @media (max-width: 750px) {
+    .movie-card{
+        width: 100px;
+        height: 100px;
+    }
+  }
+  
+  @media (max-width: 670px) {
+   
+  }
+  
+  @media (max-width: 530px) {
+   
+  }
+  
+  @media (max-width: 460px) {
+ 
+  }
