--- a/NHH_netflix/src/styles.scss
+++ b/NHH_netflix/src/styles.scss
@@ -15,3 +15,8 @@ body{
 }
 html, body { height: 100%; }
 body { margin: 0; }
+
+:root{
+    --text:rgb(153, 153, 153);
+    --bg-header:rgb(0, 0, 0);
+}
