--- a/NHH_netflix/src/app/components/header/header.component.scss
+++ b/NHH_netflix/src/app/components/header/header.component.scss
@@ -27,7 +27,8 @@
   ul {
     margin: 0 !important;
   }
-  .header-menu{
+
+  .header-menu {
     display: none;
   }
 
@@ -224,12 +225,15 @@
     }
 
   }
+
+
 }
 
 // reponsive tablet, mobile
 @media (max-width: 1400px) {
   .header {
     justify-content: space-between !important;
+
     // padding:0px 20px;
     // .header-menu{
     //   font-size: 30px;
@@ -243,13 +247,16 @@
 @media (max-width: 975px) {
   .header {
     justify-content: flex-start !important;
-    padding:0px 20px;
-     .header-menu{
-      display: block;
+    padding: 0px 20px;
+
+    .header-menu {
+      display: none;
     }
+
     .navigation-menu {
       display: none !important;
     }
+
     .element {
       display: none !important;
     }
@@ -258,22 +265,74 @@
 
 @media (max-width: 750px) {
   .header {
-
+    min-height: 60px;
     justify-content: flex-start !important;
-    padding:0px 20px;
-     .header-menu{
+    padding: 0px 20px;
+    background-color: var(--bg-header);
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    .header-menu {
       display: block;
     }
-    header-menu{
+
+    header-menu {
       display: block;
     }
+
     .navigation-menu {
-      display: none !important;
+      display: none;
     }
 
     .element {
-      display: none !important;
+      display: none;
     }
+
+    img {
+      width: 90px;
+      height: 30px;
+    }
+  }
+
+  .header-mobile {
+    transition: 0.5s .5s ease;
+    padding: 10px;
+    background-color: rgb(0, 0, 0);
+    width: 60%;
+    height: 100vh;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    color: var(--text);
+    line-height: 2;
+
+    a {
+      color: var(--text);
+    }
+
+    .account-name {
+      margin-left: 20px;
+      align-items: center;
+      display: flex;
+    }
+
+    .menu-select {
+      padding: 0px 10px;
+      position: relative;
+
+      &::before {
+        content: "";
+        width: 2px;
+        height: 80%;
+        background-color: red;
+        position: absolute;
+        top: 3px;
+        left: 0;
+      }
+    }
+
   }
 }
 
@@ -281,10 +340,12 @@
   .header {
 
     justify-content: flex-start !important;
-    padding:0px 20px;
-     .header-menu{
+    padding: 0px 20px;
+
+    .header-menu {
       display: block;
     }
+
     .navigation-menu {
       display: none !important;
     }
@@ -292,6 +353,45 @@
     .element {
       display: none !important;
     }
+  }
+
+  .header-mobile {
+    transition: 0.5s .5s ease;
+    padding: 10px;
+    background-color: rgb(0, 0, 0);
+    width: 60%;
+    height: 100vh;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    color: var(--text);
+    line-height: 2;
+
+    a {
+      color: var(--text);
+    }
+
+    .account-name {
+      margin-left: 20px;
+      align-items: center;
+      display: flex;
+    }
+
+    .menu-select {
+      padding: 0px 10px;
+      position: relative;
+
+      &::before {
+        content: "";
+        width: 2px;
+        height: 80%;
+        background-color: red;
+        position: absolute;
+        top: 3px;
+        left: 0;
+      }
+    }
+
   }
 }
 
@@ -299,10 +399,12 @@
   .header {
 
     justify-content: flex-start !important;
-    padding:0px 20px;
-     .header-menu{
+    padding: 0px 20px;
+
+    .header-menu {
       display: block;
     }
+
     .navigation-menu {
       display: none !important;
     }
@@ -311,15 +413,56 @@
       display: none !important;
     }
   }
+
+  .header-mobile {
+    transition: 0.5s .5s ease;
+    padding: 10px;
+    background-color: rgb(0, 0, 0);
+    width: 60%;
+    height: 100vh;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    color: var(--text);
+    line-height: 2;
+
+    a {
+      color: var(--text);
+    }
+
+    .account-name {
+      margin-left: 20px;
+      align-items: center;
+      display: flex;
+    }
+
+    .menu-select {
+      padding: 0px 10px;
+      position: relative;
+
+      &::before {
+        content: "";
+        width: 2px;
+        height: 80%;
+        background-color: red;
+        position: absolute;
+        top: 3px;
+        left: 0;
+      }
+    }
+
+  }
 }
 
 @media (max-width: 460px) {
   .header {
     justify-content: flex-start !important;
-    padding:0px 20px;
-    .header-menu{
+    padding: 0px 20px;
+
+    .header-menu {
       display: block;
     }
+
     .navigation-menu {
       display: none !important;
     }
@@ -327,5 +470,44 @@
     .element {
       display: none !important;
     }
+  }
+
+  .header-mobile {
+    transition: 0.5s .5s ease;
+    padding: 10px;
+    background-color: rgb(0, 0, 0);
+    width: 60%;
+    height: 100vh;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    color: var(--text);
+    line-height: 2;
+
+    a {
+      color: var(--text);
+    }
+
+    .account-name {
+      margin-left: 20px;
+      align-items: center;
+      display: flex;
+    }
+
+    .menu-select {
+      padding: 0px 10px;
+      position: relative;
+
+      &::before {
+        content: "";
+        width: 2px;
+        height: 80%;
+        background-color: red;
+        position: absolute;
+        top: 3px;
+        left: 0;
+      }
+    }
+
   }
 }
