--- a/NHH_netflix/src/app/components/movie-category/movie-category.component.scss
+++ b/NHH_netflix/src/app/components/movie-category/movie-category.component.scss
@@ -15,3 +15,33 @@
         }
     }
 }
+
+
+// reponsive tablet, mobile
+@media (max-width: 1400px) {
+    
+}
+
+@media (max-width: 975px) {
+ 
+}
+
+@media (max-width: 750px) {
+ .card{
+    h4{
+        padding: 10px 20px;
+    }
+ }
+}
+
+@media (max-width: 670px) {
+ 
+}
+
+@media (max-width: 530px) {
+ 
+}
+
+@media (max-width: 460px) {
+
+}
