--- a/NHH_netflix/src/app/pages/browse/browse.component.html
+++ b/NHH_netflix/src/app/pages/browse/browse.component.html
@@ -3,7 +3,7 @@
     <app-header></app-header>
     <!-- banner -->
     <div class="banner">
-        <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie?.poster_path" alt="movie">
+        <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie.poster_path" alt="movie">
 <!-- 
         @if(bannerMovie && bannerMovie.videoKey){
         <iframe
