--- a/NHH_netflix/src/app/pages/login/login.component.scss
+++ b/NHH_netflix/src/app/pages/login/login.component.scss
@@ -1,36 +1,38 @@
 .header {
   background-image: linear-gradient(to bottom, rgb(14 14 14), rgb(9 9 9/7%));
 }
+
 .login-container {
   display: flex;
   justify-content: center;
+
   .login-card {
     margin-top: 200px;
     background-color: rgba(15, 14, 14, 0.9);
     width: 350px;
     margin: auto;
     padding: 60px 48px;
-    margin-top:120px;
-    .heading{
-        font-size: 24px;
-        font-weight: bold;
-        text-transform: uppercase;
-        color: white;
-        text-align: center;
-        margin-bottom: 30px;
+    margin-top: 120px;
+
+    .heading {
+      font-size: 24px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: whitesmoke;
+      text-align: center;
+      margin-bottom: 32px;
     }
-    .forgot-btn{
+
+    .forgot-btn {
       color: whitesmoke !important;
       text-decoration: none;
-      &:hover{
-        // border-bottom: 1px solid whitesmoke;
-      }
     }
   }
 }
 
 .form-field {
   margin-bottom: 10px;
+
   .input {
     width: 100% !important;
     background-color: rgba(15, 14, 14, 0.9);
@@ -38,23 +40,28 @@
     border-radius: 2px;
     color: white;
     outline: 1px solid gray;
-    margin:10px 0px;
+    margin-top: 8px;
   }
 }
+
 .action-field {
   display: flex;
   justify-content: center;
-  .btn{
+
+  .btn {
     padding: 10px 12px;
     border-radius: 5px;
     width: 100%;
     color: whitesmoke;
-    font-weight: bold;
+    font-weight: 300;
   }
+
   .login-button {
     background-color: red;
+    margin-top: 32px;
   }
-  .sign-in__code{
+
+  .sign-in__code {
     background-color: rgba(83, 82, 82, 0.9);
   }
 }
