--- a/NHH_netflix/src/styles.scss
+++ b/NHH_netflix/src/styles.scss
@@ -20,3 +20,6 @@ body { margin: 0; }
     --text:rgb(153, 153, 153);
     --bg-header:rgb(0, 0, 0);
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
