--- a/NHH_netflix/src/app/pages/login/login.component.scss
+++ b/NHH_netflix/src/app/pages/login/login.component.scss
@@ -42,6 +42,9 @@
     outline: 1px solid gray;
     margin-top: 8px;
   }
+  .icon-pw i{
+    transform: translate(-24px, 22px) !important;
+  }
 }
 
 .action-field {
